Add support for render nurse